--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.6.1",
+    "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.0",
     "ngx-toastr": "^14.2.1",
